--- a/example-microservice/src/main/resources/application.properties
+++ b/example-microservice/src/main/resources/application.properties
@@ -4,5 +4,5 @@ server.port=8082
 # Secret for the JWT signing
 jwt.secret=exampleSecret
 server.address=0.0.0.0
-server.servlet.context-path=
+server.servlet.context-path=/api
 
