--- a/example-microservice/build.gradle
+++ b/example-microservice/build.gradle
@@ -41,6 +41,7 @@ repositories {
 
 dependencies {
 
+	testImplementation 'junit:junit:4.13.1'
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
