--- a/review-microservice/build.gradle
+++ b/review-microservice/build.gradle
@@ -107,23 +107,23 @@ checkstyle {
 	toolVersion "10.12.5"
 	// Link Checkstyle task to customCheckstyle
 	configFile = file("${projectDir}/../config/checkstyle/checkstyle.xml")
-	ignoreFailures = false // Set to true if you want the build to ignore Checkstyle failures
+	ignoreFailures = true // Set to true if you want the build to ignore Checkstyle failures
 	showViolations = true // Set to true to display Checkstyle violations in the console
 
 	checkstyleMain {
 		source = project.sourceSets.main.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
-			!file.path.contains('generated') // Example condition, modify as per your generated code path
+			!file.path.contains('build') // Example condition, modify as per your generated code path
 		}
-		excludes = ['**/generated/.*']
+		excludes = ['**/generated/.*', '**/build/.*']
 	}
 
 	checkstyleTest {
 		source = project.sourceSets.test.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
-			!file.path.contains('generated') // Example condition, modify as per your generated code path
+			!file.path.contains('build') // Example condition, modify as per your generated code path
 		}
-		excludes = ['**/generated/.*']
+		excludes = ['**/generated/.*', '**/build/.*']
 	}
 }
 
@@ -135,9 +135,9 @@ pmd {
 	pmdMain {
 		source = project.sourceSets.main.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
-			!file.path.contains('generated') // Example condition, modify as per your generated code path
+			!file.path.contains('build') // Example condition, modify as per your generated code path
 		}
-		excludes = ['**/generated/.*']
+		excludes = ['**/generated/.*', '**/build/.*']
 	}
 
 	pmdTest {
@@ -145,7 +145,7 @@ pmd {
 			// Exclude directories or files associated with generated code
 			!file.path.contains('generated') // Example condition, modify as per your generated code path
 		}
-		excludes = ['**/generated/.*']
+		excludes = ['**/generated/.*', '**/build/.*']
 	}
 
 }
