--- a/review-microservice/build.gradle
+++ b/review-microservice/build.gradle
@@ -42,6 +42,7 @@ repositories {
 dependencies {
 
 	testImplementation 'junit:junit:4.13.1'
+	testImplementation 'org.jetbrains:annotations:24.0.0'
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
