Update build.gradle, reset gradle build to see how the tests run.

--- a/review-microservice/build.gradle
+++ b/review-microservice/build.gradle
@@ -79,8 +79,8 @@ test {
 	useJUnitPlatform()
 	jacoco {
 		enabled = true
-		includes = ['nl.tudelft.sem.template.review.*']
-		excludes = ['nl.tudelft.sem.template.model']
+		includes = ['nl.tudelft.sem.template.*']
+		excludes = []
 	}
 }
 
@@ -95,7 +95,7 @@ jacocoTestCoverageVerification() {
 		rule {
 			enabled = true
 			element = 'CLASS'
-			includes = ['nl.tudelft.sem.template.review.*']
+			includes = ['nl.tudelft.sem.template.*']
 
 			limit {
 				counter = 'BRANCH'
