--- a/review-microservice/build.gradle
+++ b/review-microservice/build.gradle
@@ -74,6 +74,13 @@ dependencies {
 
 
 }
+jacocoTestReport {
+	reports {
+		xml.required = false
+		csv.required = false
+		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+	}
+}
 
 test {
 	useJUnitPlatform()
